--- a/package.json
+++ b/package.json
@@ -11,11 +11,22 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.2",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
     "react": "16.13.1",
+    "react-addons-shallow-compare": "^15.6.3",
     "react-native": "0.63.3",
     "react-native-device-info": "^7.2.1",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.16.1",
     "react-native-svg": "^12.1.0",
-    "react-native-svg-transformer": "^0.14.3"
+    "react-native-svg-transformer": "^0.14.3",
+    "react-navigation-fluid-transitions": "^0.3.2",
+    "underscore": "^1.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
