--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -16,7 +16,10 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-
+MYAPP_UPLOAD_STORE_FILE=key_store_upload.jks
+MYAPP_UPLOAD_KEY_ALIAS=alias
+MYAPP_UPLOAD_STORE_PASSWORD=Gnha992000
+MYAPP_UPLOAD_KEY_PASSWORD=Gnha992000
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
