--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "appcenter": "4.0.0",
+    "appcenter-analytics": "4.0.0",
+    "appcenter-crashes": "4.0.0",
     "react": "16.13.1",
     "react-addons-shallow-compare": "^15.6.3",
     "react-native": "0.63.3",
+    "react-native-code-push": "^6.4.1",
     "react-native-device-info": "^7.2.1",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-linear-gradient": "^2.5.6",
