--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "16.13.1",
     "react-addons-shallow-compare": "^15.6.3",
     "react-native": "0.63.3",
+    "react-native-animatable": "^1.3.3",
     "react-native-code-push": "^6.4.1",
     "react-native-device-info": "^7.2.1",
     "react-native-gesture-handler": "^1.9.0",
